--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -31,7 +31,7 @@
 
       <div class="mt-6 flex items-center justify-between">
         <%= link_to "Cancel", profile_path, class: "text-gray-600 dark:text-gray-400 hover:text-gray-800" %>
-        <%= f.submit "Save Changes", class: "px-6 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700" %>
+        <%= f.submit "Save Changes", class: "px-6 py-2 bg-teal-600 text-white rounded-md hover:bg-teal-700" %>
       </div>
     <% end %>
   </div>
