--- a/app/views/shared/_calendar_grid.html.erb
+++ b/app/views/shared/_calendar_grid.html.erb
@@ -69,7 +69,7 @@
       <div class="relative p-1.5 sm:p-2 flex flex-col
                   <%= !has_gaps ? 'border-r border-b border-gray-200 dark:border-gray-700' : '' %>
                   <%= has_gaps && !is_today && is_current_month ? 'bg-white dark:bg-gray-800' : '' %>
-                  <%= 'bg-indigo-50 dark:bg-indigo-900/20' if is_today && !has_gaps %>
+                  <%= 'bg-teal-50 dark:bg-teal-900/20' if is_today && !has_gaps %>
                   <%= 'bg-blue-50 dark:bg-blue-900/20' if is_today && has_gaps %>
                   <%= show_past_opacity && is_past ? 'opacity-50' : '' %>
                   <%= !is_current_month && !has_gaps ? 'bg-gray-50 dark:bg-gray-900' : '' %>
@@ -79,7 +79,7 @@
         <!-- Date number -->
         <div class="flex items-center justify-between mb-0.5 sm:mb-1 relative z-20">
           <span class="text-xs sm:text-sm font-semibold 
-                      <%= is_today && !has_gaps ? 'text-indigo-600 dark:text-indigo-400' : '' %>
+                      <%= is_today && !has_gaps ? 'text-teal-600 dark:text-teal-400' : '' %>
                       <%= is_today && has_gaps ? 'text-blue-600 dark:text-blue-400' : '' %>
                       <%= !is_today ? 'text-gray-700 dark:text-gray-300' : '' %>">
             <%= date.day %>
@@ -145,7 +145,7 @@
           <%= link_to need_path(need), class: "pointer-events-auto absolute", 
               style: "top: #{top_px}px; left: calc(#{left_percent}% + #{gap_adjustment}px + 0.375rem); width: calc(#{width_percent}% - 0.75rem - #{gap_adjustment > 0 ? 1 : 0}px); z-index: #{z_index};" do %>
             <div class="text-xs p-1 rounded transition-colors overflow-hidden
-                        <%= user_signed_up ? 'bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-200' : need.full? ? 'bg-gray-200 dark:bg-gray-700 text-gray-600 dark:text-gray-400' : 'bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 hover:bg-indigo-200 dark:hover:bg-indigo-800' %>"
+                        <%= user_signed_up ? 'bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-200' : need.full? ? 'bg-gray-200 dark:bg-gray-700 text-gray-600 dark:text-gray-400' : 'bg-teal-100 dark:bg-teal-900 text-teal-700 dark:text-teal-300 hover:bg-teal-200 dark:hover:bg-teal-800' %>"
                  style="border-left: 2px solid <%= need.category.color %>;"
                  title="<%= need.title %><%= volunteer_names.present? ? " (#{volunteer_names})" : '' %>">
               <div class="whitespace-nowrap overflow-hidden text-ellipsis">
